# python-saxobank

./: .gitignore  LICENSE  README.md  memo.py  mkdocs.yml  mypy.ini  pyproject.toml  python-saxobank.code-workspace
.jupyter/: UserSession.ipynb  sample.ipynb
.scrapy/openapi/: scrapy.cfg
.scrapy/openapi/openapi/: items.py  middlewares.py  pipelines.py  settings.py
.scrapy/openapi/openapi/spiders/: charts.py
doc/: class_diagram.md  quick_start.md  saxobank_open_api.md  throttle.md
docs/: api_request.md  class_diagram.md  concept.md  model.md  quick_start.md  saxobank_open_api.md  throttle.md
docs/api/: application.md  quotation-note-saxobank.md
docs/api/chart/: charts.md  index.md
docs/model/: chart.md  common.md  req.md
docs/stylesheet/: docstrings.css
saxobank/: __init__.py  application.py  auth.py  common.py  converter.py  dispatcher.py  endpoint.py  endpoints.py  environment.py  exception.py  exceptions.py  order.py  portfolio.py  request.py  root.py  service_group.py  streaming_session.py  subscription.py  transitional.py  user_session.py
saxobank/domain/: root.py
saxobank/domain/core/: api_call.py  application.py  authorization.py  endpoint.py  portfolio.py  streaming_session.py  subscription.py  user_session.py
saxobank/model/: __init__.py  base.py  chart.py  common.py  core.py  enum.py  port.py  streaming.py  trade.py
saxobank/model/chart/: charts.py
saxobank/model/cs/: audit.py
saxobank/model/port/: __init__.py  clients.py  closed_positions.py  closedpositions.py  port.py  positions.py
saxobank/model/ref/: __init__.py  instruments.py
saxobank/model/req/: __init__.py  chart.py
saxobank/model/resp/: __init__.py  chart.py  port.py
saxobank/model/root/: sessions.py
saxobank/models/: __init__.py  common.py  core.py  enums.py  port.py  ref.py  trade.py
tests/: test_order.py
tests/integration/: test_saxobank.py
tests/model/: streaming.py  test_streaming.py
tests/model/chart/: charts.py  test_charts.py
